--- a/3a_Plot_Signal_SerialPlotter/.cproject
+++ b/3a_Plot_Signal_SerialPlotter/.cproject
@@ -173,5 +173,12 @@
 			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
 	</storageModule>
-	<storageModule moduleId="refreshScope"/>
+	<storageModule moduleId="refreshScope" versionNumber="2">
+		<configuration configurationName="Debug">
+			<resource resourceType="PROJECT" workspacePath="/3a_Plot_Signal_SerialPlotter"/>
+		</configuration>
+		<configuration configurationName="Release">
+			<resource resourceType="PROJECT" workspacePath="/3a_Plot_Signal_SerialPlotter"/>
+		</configuration>
+	</storageModule>
 </cproject>
